@@ -24,6 +24,7 @@ See the end for copying conditions.
    defined in RFC7250. This mechanism must be explicitly enabled via the
    GNUTLS_ENABLE_CERT_TYPE_NEG flag in gnutls_init().
 
+** gnutls-cli: enable CRL validation on startup (#564)
 
 ** API and ABI modifications:
 GNUTLS_ENABLE_EARLY_START: Added
@@ -31,6 +32,8 @@ gnutls_record_set_max_early_data_size: Added
 gnutls_certificate_type_get2: Added
 gnutls_priority_certificate_type_list2: Added
 GNUTLS_ENABLE_CERT_TYPE_NEG: Added
+GNUTLS_TL_FAIL_ON_INVALID_CRL: Added
+GNUTLS_CERTIFICATE_VERIFY_CRLS: Added
 gnutls_ctype_target_t: New enumeration
 
 
